[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-cert = { version="0.2.4", default-features = false, features = ["pem"] }
const-oid = { version = "0.9.5", default-features = false, features = ["db"] }
cms = "0.2.2"
der = { version="0.7.8", features = ["alloc", "derive", "flagset", "oid"] }
base64ct = { version="1.6.0", features = ["alloc"], optional=true }
spki = { version = "0.7.2", default-features = false, features = ["alloc"] }
pqckeys = { git = "https://github.com/carl-wallace/pqckeys", optional=true }
pem-rfc7468 = { version="0.7.0", features = ["alloc"]}

certval = { git = "https://github.com/carl-wallace/rust-pki", features = ["std", "pqc"]}

clap = {version = "3.0.7", default-features = false, features=["std", "derive"]}
subtle-encoding = {version = "0.5", default-features = false, features = ["hex", "alloc"]}
sha-1 = {version = "0.10.0", default-features = false}
p256 = {version = "0.11.1", default-features = false, features = ["ecdsa", "ecdsa-core", "pem", "pkcs8"]}

flagset = { version = "0.4.3", package = "flagset" }
rand_core = { version = "0.6", features = ["std"] }
names = { version = "0.13.0", default-features = false }
rand = "0.8.5"
hex-literal = "0.3.4"

pqcrypto-internals =  {version = "0.2.5", optional = true}
pqcrypto-dilithium =  {version = "0.5.0", optional = true}
pqcrypto-falcon = {version = "0.3.0", optional = true}
pqcrypto-sphincsplus = {version = "0.7.0", optional = true}
pqcrypto = {version = "0.17.0", optional = true}
pqcrypto-traits = {version = "0.3.5", optional = true}

[features]
default = ["pqc"]
pqc = ["pqcrypto-dilithium", "pqcrypto-falcon", "pqcrypto-sphincsplus", "pqcrypto", "pqcrypto-traits", "pqckeys"]

